<resources>
    <string name="app_name">Grocery App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="itemName">Apple</string>
    <string name="itemQuantity">26</string>
    <string name="itemPrice">150Rs</string>
    <string name="totalCost">150</string>
    <string name="totalCostTitle">Total Cost</string>
    <string name="title">Add Items to your Cart</string>
    <string name="etItem">Item</string>
    <string name="etQuantity">Quantity</string>
    <string name="etPrice">Price</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="todo">TODO</string>
</resources>
